--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html lang='en' ng-app='fanSite'>
 <head>
+  <title>Arden's Flyer fansite</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -28,5 +29,7 @@
   <script src='./home/homeCtrl.js'></script>
   <script src='./players/playersCtrl.js'></script>
   <script src='./players/playersService.js'></script>
+  <script src='./about/aboutCtrl.js'></script>
+  <script src='./about/aboutService.js'></script>
 </body>
 </html>
