--- a/players/players.html
+++ b/players/players.html
@@ -7,7 +7,7 @@
 
     <div class='coreP' ng-repeat='player in players'>
 
-      <div class="coreBox1">
+      <div class="">
         <h3 class="name">{{player.name}}</h3>
         <img class='playerImg'src="{{player.image}}"/>
         <h4 class="num">#{{player.number}}</h4>
@@ -23,4 +23,3 @@
 
 
     </div>
-    
